Changed actions sort, added 7 player conditions: Is Dead, Is Underwater, Is in Rain, Is in Lava, Is in snow, Is inside vehicle, Is in team