@@ -96,10 +96,10 @@ public enum ActionType {
     // Communication
     PLAYER_SEND_MESSAGE(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, SendMessageAction.class, Material.WRITABLE_BOOK, new ArgumentSlot("messages", ValueType.TEXT, (byte) 18), new ParameterSlot("type", Arrays.asList("new-line", "join-spaces", "join"), Material.PAPER, Material.MAP, Material.FILLED_MAP)),
     PLAYER_SEND_DIALOG(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, SendDialogAction.class, Material.GLOBE_BANNER_PATTERN, new ArgumentSlot("messages", ValueType.TEXT, (byte) 18), new ArgumentSlot("cooldown", ValueType.NUMBER)),
-    PLAYER_SHOW_ACTIONBAR(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowActionbarAction.class, Material.BOOK, new ArgumentSlot("actionbar", ValueType.TEXT, (byte) 18), new ParameterSlot("type", Arrays.asList("join", "join-spaces"), Material.FILLED_MAP, Material.MAP)),
-    PLAYER_SHOW_TITLE(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowTitleAction.class, Material.OAK_SIGN, new ArgumentSlot("title", ValueType.TEXT), new ArgumentSlot("subtitle", ValueType.TEXT), new ArgumentSlot("fade-in", ValueType.NUMBER), new ArgumentSlot("stay", ValueType.NUMBER), new ArgumentSlot("fade-out", ValueType.NUMBER)),
-    PLAYER_SHOW_ADVANCEMENT(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowAdvancementAction.class, Material.EMERALD, new ArgumentSlot("icon", ValueType.ITEM), new ParameterSlot("style", Arrays.asList("goal", "task", "challenge"), Material.EMERALD, Material.DIAMOND, Material.BEACON), new ArgumentSlot("title", ValueType.TEXT), new ArgumentSlot("message", ValueType.TEXT)),
     PLAYER_CLEAR_CHAT(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ClearChatAction.class, Material.BUCKET),
+    PLAYER_SHOW_TITLE(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowTitleAction.class, Material.OAK_SIGN, new ArgumentSlot("title", ValueType.TEXT), new ArgumentSlot("subtitle", ValueType.TEXT), new ArgumentSlot("fade-in", ValueType.NUMBER), new ArgumentSlot("stay", ValueType.NUMBER), new ArgumentSlot("fade-out", ValueType.NUMBER)),
+    PLAYER_SHOW_ACTIONBAR(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowActionbarAction.class, Material.REDSTONE_TORCH, new ArgumentSlot("actionbar", ValueType.TEXT, (byte) 18), new ParameterSlot("type", Arrays.asList("join", "join-spaces"), Material.FILLED_MAP, Material.MAP)),
+    PLAYER_SHOW_ADVANCEMENT(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowAdvancementAction.class, Material.EMERALD, new ArgumentSlot("icon", ValueType.ITEM), new ParameterSlot("style", Arrays.asList("goal", "task", "challenge"), Material.EMERALD, Material.DIAMOND, Material.BEACON), new ArgumentSlot("title", ValueType.TEXT), new ArgumentSlot("message", ValueType.TEXT)),
     PLAYER_PLAY_SOUND(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, PlaySoundAction.class, Material.MUSIC_DISC_OTHERSIDE, new ArgumentSlot("sound", ValueType.TEXT), new ArgumentSlot("volume", ValueType.NUMBER), new ArgumentSlot("pitch", ValueType.NUMBER), new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("category", Arrays.asList("ambient", "blocks", "hostile", "master", "music", "neutral", "players", "records", "voice", "weather"), Material.CYAN_STAINED_GLASS, Material.GRASS_BLOCK, Material.ZOMBIE_HEAD, Material.GOLDEN_PICKAXE, Material.NOTE_BLOCK, Material.PIGLIN_HEAD, Material.PLAYER_HEAD, Material.MUSIC_DISC_CAT, Material.NAUTILUS_SHELL, Material.WATER_BUCKET), new ArgumentSlot("seed", ValueType.NUMBER)),
     PLAYER_STOP_SOUNDS(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, StopSoundsAction.class, Material.MUSIC_DISC_11, new ArgumentSlot("sounds", ValueType.TEXT, (byte) 18)),
     PLAYER_SHOW_WIN_SCREEN(ActionCategory.PLAYER_ACTION, MenusCategory.COMMUNICATION, ShowWinScreenAction.class, Material.DRAGON_EGG),
@@ -112,8 +112,6 @@ public enum ActionType {
     PLAYER_RESTORE_INVENTORY(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, RestoreInventoryAction.class, Material.DROPPER),
     PLAYER_SET_ITEM_IN_HAND(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetItemInHandAction.class, Material.NETHERITE_SWORD, new ArgumentSlot("main", ValueType.ITEM), new ParameterSlot("replace-with-air"), new ArgumentSlot("off", ValueType.ITEM)),
     PLAYER_SET_CURSOR_ITEM(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetCursorItemAction.class, Material.TRIPWIRE_HOOK, new ArgumentSlot("item", ValueType.ITEM)),
-
-    PLAYER_SWING_HAND(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SwingHandAction.class, Material.LEVER, new ParameterSlot("hand", List.of("main", "off"), Material.NETHERITE_SWORD, Material.SHIELD)),
     PLAYER_SET_ITEMS(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetItemsAction.class, Material.DARK_OAK_CHEST_BOAT, new ArgumentSlot("items", ValueType.ITEM, (byte) 27, true)),
     PLAYER_SET_ARMOR(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetArmorAction.class, Material.NETHERITE_CHESTPLATE, new ArgumentSlot("helmet", ValueType.ITEM), new ArgumentSlot("chestplate", ValueType.ITEM), new ArgumentSlot("leggings", ValueType.ITEM), new ArgumentSlot("boots", ValueType.ITEM), new ParameterSlot("replace-with-air")),
     PLAYER_GIVE_RANDOM_ITEM(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, GiveRandomItemAction.class, Material.LIME_SHULKER_BOX, new ArgumentSlot("items", ValueType.ITEM, (byte) 27)),
@@ -121,10 +119,9 @@ public enum ActionType {
     PLAYER_CLOSE_INVENTORY(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, CloseInventoryAction.class, Material.STRUCTURE_VOID),
     PLAYER_REMOVE_ITEMS(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, RemoveItemsAction.class, Material.COBWEB, new ArgumentSlot("items", ValueType.ITEM, (byte) 27)),
     PLAYER_SET_SLOT(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetSlotAction.class, Material.SLIME_BALL, new ArgumentSlot("slot", ValueType.NUMBER)),
-    PLAYER_APPLY_MENDING(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, ApplyMendingAction.class, Material.ENCHANTED_BOOK, new ArgumentSlot("amount", ValueType.NUMBER)),
-    PLAYER_SET_COMPASS_TARGET(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetCompassTarget.class, Material.COMPASS, new ArgumentSlot("location", ValueType.LOCATION)),
     PLAYER_SET_HOTBAR(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetHotBarAction.class, Material.BIRCH_CHEST_BOAT, new ArgumentSlot("items", ValueType.ITEM, (byte) 9, true), new ParameterSlot("replace-with-air")),
     PLAYER_SET_ITEM_COOLDOWN(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, SetItemCooldownAction.class, Material.CLOCK, new ArgumentSlot("item", ValueType.ITEM), new ArgumentSlot("cooldown", ValueType.NUMBER)),
+    PLAYER_APPLY_MENDING(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, ApplyMendingAction.class, Material.ENCHANTED_BOOK, new ArgumentSlot("amount", ValueType.NUMBER)),
     //PLAYER_DAMAGE_ITEM(                 ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, null, Material.NETHERITE_SCRAP,  new ArgumentSlot("item",VariableType.ITEM),new ArgumentSlot("damage",VariableType.NUMBER)),
     PLAYER_OPEN_SIGN(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, OpenSignAction.class, Material.OAK_SIGN, new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("side", Arrays.asList("front", "back"), Material.OAK_SIGN, Material.WARPED_SIGN)),
     PLAYER_OPEN_CONTAINER(ActionCategory.PLAYER_ACTION, MenusCategory.INVENTORY, OpenContainerAction.class, Material.BARREL, new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("save")),
@@ -141,11 +138,11 @@ public enum ActionType {
     //PLAYER_RANDOM_TELEPORT(             ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT,      null, Material.CHORUS_FRUIT,         new ArgumentSlot("locations",VariableType.LOCATION,(byte)18)),
     //PLAYER_TELEPORT_QUEUE(              ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT,      null, Material.ENDER_EYE,          new ArgumentSlot("locations",VariableType.LOCATION,(byte)18),new ArgumentSlot("cooldown",VariableType.NUMBER)),
     PLAYER_KICK(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, KickPlayerAction.class, Material.BARRIER),
-    PLAYER_FIREWORK_BOOST(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, FireworkBoostAction.class, Material.FIREWORK_ROCKET, new ArgumentSlot("firework", ValueType.ITEM)),
-    PLAYER_SADDLE_ENTITY(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, SaddleEntityAction.class, Material.SADDLE, new ArgumentSlot("entity", ValueType.TEXT)),
     PLAYER_LAUNCH_VERTICAL(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, LaunchVerticalAction.class, Material.PRISMARINE_SHARD, new ArgumentSlot("power", ValueType.NUMBER)),
     PLAYER_LAUNCH_HORIZONTAL(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, LaunchHorizontalAction.class, Material.FEATHER, new ArgumentSlot("power", ValueType.NUMBER)),
     PLAYER_LAUNCH_TO_LOCATION(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, LaunchToLocationAction.class, Material.MAP, new ArgumentSlot("location", ValueType.LOCATION), new ArgumentSlot("power", ValueType.NUMBER)),
+    PLAYER_SADDLE_ENTITY(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, SaddleEntityAction.class, Material.SADDLE, new ArgumentSlot("entity", ValueType.TEXT)),
+    PLAYER_FIREWORK_BOOST(ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, FireworkBoostAction.class, Material.FIREWORK_ROCKET, new ArgumentSlot("firework", ValueType.ITEM)),
     //PLAYER_SET_SPECTATOR_TARGET(        ActionCategory.PLAYER_ACTION, MenusCategory.MOVEMENT, null, Material.SKELETON_SKULL, new ArgumentSlot("entity",VariableType.TEXT)),
 
     // Params
@@ -184,37 +181,47 @@ public enum ActionType {
     PLAYER_RELEASE_SHOULDERS(ActionCategory.PLAYER_ACTION, MenusCategory.STATE, PlayerReleaseShouldersAction.class, Material.PARROT_SPAWN_EGG, new ParameterSlot("type", List.of("all", "left", "right"), Material.PARROT_SPAWN_EGG, Material.SHIELD, Material.NETHERITE_SWORD)),
 
     // Appearance
-    PLAYER_SET_TIME(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, PlayerSetTimeAction.class, Material.CLOCK, new ArgumentSlot("time", ValueType.NUMBER)),
-    PLAYER_SET_WEATHER(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, PlayerSetWeatherAction.class, Material.WATER_BUCKET, new ParameterSlot("weather", Arrays.asList("clean", "storm"), Material.SUNFLOWER, Material.WATER_BUCKET)),
-    //PLAYER_SPAWN_PARTICLE(              ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, null, Material.NETHER_STAR, new ArgumentSlot("particle",VariableType.PARTICLE,(byte) 18),new ArgumentSlot("location",VariableType.LOCATION),new ArgumentSlot("count",VariableType.NUMBER)),
     PLAYER_SET_RESOURCE_PACK(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetResourcePackAction.class, Material.SHROOMLIGHT, new ArgumentSlot("url", ValueType.TEXT), new ArgumentSlot("prompt", ValueType.TEXT)),
     PLAYER_SET_WORLD_BORDER(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, PlayerSetWorldBorderAction.class, Material.END_CRYSTAL, new ArgumentSlot("center", ValueType.LOCATION), new ArgumentSlot("radius", ValueType.NUMBER), new ArgumentSlot("time", ValueType.NUMBER), new ArgumentSlot("warning-distance", ValueType.NUMBER), new ArgumentSlot("warning-time", ValueType.NUMBER), new ArgumentSlot("safe-distance", ValueType.NUMBER)),
-    PLAYER_SEND_SIGN_CHANGE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SendSignChangeAction.class, Material.OAK_SIGN, new ArgumentSlot("location", ValueType.LOCATION), new ArgumentSlot("text", ValueType.TEXT), new ArgumentSlot("number", ValueType.NUMBER)),
-    PLAYER_SHOW_ENTITY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowEntityAction.class, Material.PIGLIN_HEAD, new ArgumentSlot("entity", ValueType.TEXT)),
+    PLAYER_SET_TIME(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, PlayerSetTimeAction.class, Material.CLOCK, new ArgumentSlot("time", ValueType.NUMBER)),
+    PLAYER_SET_WEATHER(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, PlayerSetWeatherAction.class, Material.WATER_BUCKET, new ParameterSlot("weather", Arrays.asList("clean", "storm"), Material.SUNFLOWER, Material.WATER_BUCKET)),
+    PLAYER_SET_VISUAL_FIRE(ActionCategory.ENTITY_ACTION, MenusCategory.APPEARANCE, SetVisualFireAction.class, Material.CAMPFIRE, new ParameterSlot("boolean")),
     PLAYER_SHOW_SCOREBOARD(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowScoreboardAction.class, Material.PAINTING, new ArgumentSlot("scoreboard", ValueType.TEXT)),
     PLAYER_HIDE_SCOREBOARD(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, HideScoreboardAction.class, Material.ITEM_FRAME),
     PLAYER_SHOW_BOSS_BAR(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowBossBarAction.class, Material.DRAGON_BREATH, new ArgumentSlot("bossbar", ValueType.TEXT)),
     PLAYER_HIDE_BOSS_BAR(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, HideBossBarAction.class, Material.DRAGON_HEAD, new ArgumentSlot("bossbar", ValueType.TEXT)),
-
+    PLAYER_SET_ARROWS_IN_BODY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetArrowsInBodyAction.class, Material.ARROW, new ArgumentSlot("count", ValueType.NUMBER), new ParameterSlot("add")),
+    PLAYER_SET_BEE_STINGERS_IN_BODY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetBeeStingersInBodyAction.class, Material.BEE_SPAWN_EGG, new ArgumentSlot("count", ValueType.NUMBER), new ParameterSlot("add")),
+    PLAYER_SET_VIEW_DISTANCE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetViewDistanceAction.class, Material.SPYGLASS, new ArgumentSlot("distance", ValueType.NUMBER), new ParameterSlot("add")),
+    PLAYER_SET_SIMULATION_DISTANCE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetSimulationDistanceAction.class, Material.WIND_CHARGE, new ArgumentSlot("distance", ValueType.NUMBER), new ParameterSlot("add")),
+    PLAYER_SWING_HAND(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SwingHandAction.class, Material.LEVER, new ParameterSlot("hand", List.of("main", "off"), Material.NETHERITE_SWORD, Material.SHIELD)),
+    PLAYER_SET_COMPASS_TARGET(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetCompassTarget.class, Material.COMPASS, new ArgumentSlot("location", ValueType.LOCATION)),
+    PLAYER_SHOW_ELDER_GUARDIAN(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowElderGuardianAction.class, Material.ELDER_GUARDIAN_SPAWN_EGG, new ParameterSlot("silent", Material.STRUCTURE_VOID, Material.NAUTILUS_SHELL)),
+    //PLAYER_SPAWN_PARTICLE(              ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, null, Material.NETHER_STAR, new ArgumentSlot("particle",VariableType.PARTICLE,(byte) 18),new ArgumentSlot("location",VariableType.LOCATION),new ArgumentSlot("count",VariableType.NUMBER)),
+    PLAYER_SEND_SIGN_CHANGE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SendSignChangeAction.class, Material.OAK_SIGN, new ArgumentSlot("location", ValueType.LOCATION), new ArgumentSlot("text", ValueType.TEXT), new ArgumentSlot("number", ValueType.NUMBER)),
+    PLAYER_SHOW_PHANTOM_BLOCK(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowPhantomBlockAction.class, Material.GLASS, new ArgumentSlot("location", ValueType.LOCATION), new ArgumentSlot("block", ValueType.ITEM)),
+    PLAYER_SHOW_ENTITY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowEntityAction.class, Material.PIGLIN_HEAD, new ArgumentSlot("entity", ValueType.TEXT)),
     PLAYER_HIDE_ENTITY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, HideEntityAction.class, Material.SKELETON_SKULL, new ArgumentSlot("entity", ValueType.TEXT)),
     PLAYER_SHOW_PLAYER(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowPlayerAction.class, Material.PLAYER_HEAD, new ArgumentSlot("player", ValueType.TEXT)),
     PLAYER_HIDE_PLAYER(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, HidePlayerAction.class, Material.WITHER_SKELETON_SKULL, new ArgumentSlot("player", ValueType.TEXT)),
-    PLAYER_SHOW_ELDER_GUARDIAN(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowElderGuardianAction.class, Material.ELDER_GUARDIAN_SPAWN_EGG, new ParameterSlot("silent", Material.STRUCTURE_VOID, Material.NAUTILUS_SHELL)),
-    PLAYER_SET_VIEW_DISTANCE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetViewDistanceAction.class, Material.SPYGLASS, new ArgumentSlot("distance", ValueType.NUMBER), new ParameterSlot("add")),
-    PLAYER_SET_SIMULATION_DISTANCE(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetSimulationDistanceAction.class, Material.WIND_CHARGE, new ArgumentSlot("distance", ValueType.NUMBER), new ParameterSlot("add")),
-    PLAYER_SHOW_PHANTOM_BLOCK(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, ShowPhantomBlockAction.class, Material.GLASS, new ArgumentSlot("location", ValueType.LOCATION), new ArgumentSlot("block", ValueType.ITEM)),
-    PLAYER_SET_ARROWS_IN_BODY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetArrowsInBodyAction.class, Material.ARROW, new ArgumentSlot("count", ValueType.NUMBER), new ParameterSlot("add")),
-    PLAYER_SET_BEE_STINGERS_IN_BODY(ActionCategory.PLAYER_ACTION, MenusCategory.APPEARANCE, SetBeeStingersInBodyAction.class, Material.BEE_SPAWN_EGG, new ArgumentSlot("count", ValueType.NUMBER), new ParameterSlot("add")),
-    PLAYER_SET_VISUAL_FIRE(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_STATE, SetVisualFireAction.class, Material.CAMPFIRE, new ParameterSlot("boolean")),
 
     /**
      * <h1>Player Conditions.</h1>
      */
 
+    IF_PLAYER_NAME_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, PlayerNameEqualsCondition.class, Material.NAME_TAG, new ArgumentSlot("names", ValueType.TEXT, (byte) 18), new ParameterSlot("require-caps")),
+    IF_PLAYER_MESSAGE_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, MessageEqualsCondition.class, Material.BOOK, new ArgumentSlot("messages", ValueType.TEXT, (byte) 18), new ParameterSlot("require-caps")),
+    IF_PLAYER_HAS_POTION_EFFECTS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, HasPotionEffectsCondition.class, Material.POTION, new ArgumentSlot("potions", ValueType.POTION, (byte) 18), new ParameterSlot("all")),
+
     IF_PLAYER_STANDS_ON_BLOCK(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsStandingOnBlockCondition.class, Material.GRASS_BLOCK, new ArgumentSlot("blocks", ValueType.ITEM, (byte) 9)),
     IF_PLAYER_LOOKS_AT_BLOCK(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsLookingAtBlockCondition.class, Material.CHEST, new ArgumentSlot("blocks", ValueType.ITEM, (byte) 9), new ArgumentSlot("locations", ValueType.LOCATION, (byte) 9), new ArgumentSlot("radius", ValueType.NUMBER)),
     IF_PLAYER_BLOCK_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsBlockEqualsCondition.class, Material.OAK_LOG, new ArgumentSlot("blocks", ValueType.ITEM, (byte) 9)),
     IF_PLAYER_IN_AREA(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, PlayerInAreaCondition.class, Material.PAPER, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION)),
+    IF_PLAYER_IS_UNDERWATER(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsUnderWater.class, Material.BLUE_STAINED_GLASS),
+    IF_PLAYER_IS_IN_RAIN(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsInRain.class, Material.WATER_BUCKET),
+    IF_PLAYER_IS_IN_LAVA(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsInLava.class, Material.LAVA_BUCKET),
+    IF_PLAYER_IS_IN_POWDERED_SNOW(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsInPowderedSnow.class, Material.POWDER_SNOW_BUCKET),
+    IF_PLAYER_IS_INSIDE_VEHICLE(ActionCategory.PLAYER_CONDITION, MenusCategory.MOVEMENT, IsInsideVehicle.class, Material.MINECART),
 
     IF_PLAYER_ITEM_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsItemEqualsCondition.class, Material.GLOW_ITEM_FRAME, new ArgumentSlot("items", ValueType.ITEM, (byte) 18), new ParameterSlot("ignore-amount", Material.BEETROOT_SEEDS, Material.OAK_BUTTON), new ParameterSlot("ignore-name", Material.NAME_TAG, Material.STRING), new ParameterSlot("ignore-lore", Material.WRITABLE_BOOK, Material.COBWEB), new ParameterSlot("ignore-enchantments", Material.ENCHANTED_BOOK, Material.BOOK), new ParameterSlot("ignore-flags", Material.BLUE_BANNER, Material.WHITE_BANNER), new ParameterSlot("ignore-material", Material.CRAFTING_TABLE, Material.WHITE_STAINED_GLASS), new ParameterSlot("ignore-damage", Material.DEAD_BUSH, Material.GOLDEN_HOE)),
     IF_PLAYER_HAS_ITEM_COOLDOWN(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, HasItemCooldownCondition.class, Material.CLOCK, new ArgumentSlot("items", ValueType.ITEM, (byte) 18)),
@@ -223,40 +230,38 @@ public enum ActionType {
     IF_PLAYER_HAS_ITEM_IN_AMOUNT(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, HasItemInAmountCondition.class, Material.CHEST_MINECART, new ArgumentSlot("item", ValueType.ITEM), new ArgumentSlot("amount", ValueType.NUMBER), new ParameterSlot("compare-mode", Arrays.asList("full", "material"), Material.SOUL_TORCH, Material.REDSTONE_TORCH)),
     IF_PLAYER_INVENTORY_NAME_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsInventoryNameEqualsCondition.class, Material.BOOK, new ArgumentSlot("names", ValueType.TEXT, (byte) 18), new ParameterSlot("require-color", Material.WHITE_WOOL, Material.BLUE_WOOL), new ParameterSlot("require-caps")),
     IF_PLAYER_HAS_ITEM_IN_HAND(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, HasItemInHandCondition.class, Material.WOODEN_SWORD, new ArgumentSlot("items", ValueType.ITEM, (byte) 18), new ParameterSlot("hand", Arrays.asList("main-hand", "off-hand", "main-or-off-hands", "main-and-off-hands"), Material.DIAMOND_SWORD, Material.SHIELD, Material.BOW, Material.CHEST), new ParameterSlot("ignore-amount", Material.BEETROOT_SEEDS, Material.OAK_BUTTON), new ParameterSlot("ignore-name", Material.NAME_TAG, Material.STRING), new ParameterSlot("ignore-lore", Material.WRITABLE_BOOK, Material.COBWEB), new ParameterSlot("ignore-enchantments", Material.ENCHANTED_BOOK, Material.BOOK), new ParameterSlot("ignore-flags", Material.BLUE_BANNER, Material.WHITE_BANNER), new ParameterSlot("ignore-material", Material.CRAFTING_TABLE, Material.WHITE_STAINED_GLASS), new ParameterSlot("ignore-damage", Material.DEAD_BUSH, Material.GOLDEN_HOE)),
-
-    IF_PLAYER_NAME_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, PlayerNameEqualsCondition.class, Material.NAME_TAG, new ArgumentSlot("names", ValueType.TEXT, (byte) 18), new ParameterSlot("require-caps")),
-    IF_PLAYER_MESSAGE_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, MessageEqualsCondition.class, Material.BOOK, new ArgumentSlot("messages", ValueType.TEXT, (byte) 18), new ParameterSlot("require-caps")),
+    IF_PLAYER_IS_INVENTORY_FULL(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsInventoryFullCondition.class, Material.GLOWSTONE_DUST),
+    IF_PLAYER_CLICKED_SLOT_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, EqualsClickedSlotCondition.class, Material.SLIME_BALL, new ArgumentSlot("slots", ValueType.NUMBER, (byte) 27)),
+    IF_PLAYER_CURRENT_SLOT_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsCurrentSlotEqualsCondition.class, Material.GRAY_STAINED_GLASS_PANE, new ArgumentSlot("slots", ValueType.NUMBER, (byte) 9)),
 
     IF_PLAYER_LIKED_WORLD(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsLikedWorldCondition.class, Material.GOLDEN_APPLE),
     IF_PLAYER_IS_SNEAKING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsSneakingCondition.class, Material.RABBIT),
     IF_PLAYER_IS_ON_GROUND(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsOnGroundCondition.class, Material.STONE_SLAB),
     IF_PLAYER_IS_FLYING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsFlyingCondition.class, Material.FEATHER),
     IF_PLAYER_HAS_SAVED_PURCHASE(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, HasSavedPurchaseCondition.class, Material.GOLD_BLOCK, new ArgumentSlot("names", ValueType.TEXT, (byte) 18)),
-
+    IF_PLAYER_IS_IN_TEAM(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsPlayerInTeam.class, Material.LIME_BANNER, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT)),
+    IF_PLAYER_IS_DEAD(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsPlayerDead.class, Material.REDSTONE),
     IF_PLAYER_GAME_MODE_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, EqualsGameModeCondition.class, Material.CRAFTING_TABLE, new ParameterSlot("game-mode", Arrays.asList("adventure", "survival", "creative", "spectator"), Material.PUFFERFISH_BUCKET, Material.CRAFTING_TABLE, Material.TNT, Material.FEATHER)),
-    IF_PLAYER_HAS_POTION_EFFECTS(ActionCategory.PLAYER_CONDITION, MenusCategory.PARAMS, HasPotionEffectsCondition.class, Material.POTION, new ArgumentSlot("potions", ValueType.POTION, (byte) 18), new ParameterSlot("all")),
     IF_PLAYER_IS_SPRINTING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsSprintingCondition.class, Material.IRON_BOOTS),
     IF_PLAYER_IS_GLOWING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsGlowingCondition.class, Material.WHITE_STAINED_GLASS),
     IF_PLAYER_IS_GLIDING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsGlidingCondition.class, Material.ELYTRA),
     IF_PLAYER_IS_BLOCKING(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsBlockingCondition.class, Material.SHIELD),
-    IF_PLAYER_IS_INVENTORY_FULL(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsInventoryFullCondition.class, Material.GLOWSTONE_DUST),
     IF_PLAYER_HAS_WORLD_PERMISSION(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, HasWorldPermissionCondition.class, Material.COMPARATOR, new ParameterSlot("permission", List.of("owner", "build", "develop"), Material.PUFFERFISH, Material.BRICK, Material.REPEATING_COMMAND_BLOCK)),
-    //IF_PLAYER_CURSOR_ITEM_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.TRIPWIRE_HOOK, new ArgumentSlot("items", ValueType.ITEM,(byte) 18), new ParameterSlot("ignore-amount", Material.BEETROOT_SEEDS, Material.OAK_BUTTON), new ParameterSlot("ignore-name", Material.NAME_TAG, Material.STRING), new ParameterSlot("ignore-lore", Material.WRITABLE_BOOK, Material.COBWEB), new ParameterSlot("ignore-enchantments", Material.ENCHANTED_BOOK, Material.BOOK), new ParameterSlot("ignore-flags",Material.BLUE_BANNER,Material.WHITE_BANNER), new ParameterSlot("ignore-material",Material.CRAFTING_TABLE,Material.WHITE_STAINED_GLASS)),
-    //IF_PLAYER_INTERACT_TYPE_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INTERACTION, null, Material.BIRCH_PRESSURE_PLATE, new ParameterSlot("id",List.of("physical","left-click-block","right-click-block","left-click-air","right-click-air"),Material.STONE_PRESSURE_PLATE,Material.MAGMA_BLOCK,Material.GRASS_BLOCK,Material.GRAY_STAINED_GLASS,Material.WHITE_STAINED_GLASS)),
-    //IF_PLAYER_IS_INVENTORY_OPENED(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.CHEST),
-    IF_PLAYER_IS_TIME_RELATIVE(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, IsTimeRelativeCondition.class, Material.CLOCK),
     IF_PLAYER_IS_FLIGHT_ALLOWED(ActionCategory.PLAYER_CONDITION, MenusCategory.STATE, IsAllowedFlightCondition.class, Material.FEATHER),
+
+    IF_PLAYER_HAS_RESOURCE_PACK(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, HasResourcePackCondition.class, Material.SHROOMLIGHT),
     IF_PLAYER_CAN_SEE_PLAYER(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, CanSeePlayersCondition.class, Material.PLAYER_HEAD, new ArgumentSlot("players", ValueType.TEXT, (byte) 18), new ParameterSlot("all")),
     IF_PLAYER_CAN_SEE_ENTITY(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, CanSeeEntitiesCondition.class, Material.PIGLIN_HEAD, new ArgumentSlot("entities", ValueType.TEXT, (byte) 18), new ParameterSlot("all")),
     IF_PLAYER_SCOREBOARD_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, IsCurrentScoreboardCondition.class, Material.PAINTING, new ArgumentSlot("scoreboards", ValueType.TEXT, (byte) 27)),
     IF_PLAYER_BOSS_BAR_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, IsCurrentBossBarCondition.class, Material.DRAGON_BREATH, new ArgumentSlot("bossbars", ValueType.TEXT, (byte) 18), new ParameterSlot("all")),
-    IF_PLAYER_HAS_RESOURCE_PACK(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, HasResourcePackCondition.class, Material.SHROOMLIGHT),
+    IF_PLAYER_IS_TIME_RELATIVE(ActionCategory.PLAYER_CONDITION, MenusCategory.APPEARANCE, IsTimeRelativeCondition.class, Material.CLOCK),
+
+    //IF_PLAYER_CURSOR_ITEM_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.TRIPWIRE_HOOK, new ArgumentSlot("items", ValueType.ITEM,(byte) 18), new ParameterSlot("ignore-amount", Material.BEETROOT_SEEDS, Material.OAK_BUTTON), new ParameterSlot("ignore-name", Material.NAME_TAG, Material.STRING), new ParameterSlot("ignore-lore", Material.WRITABLE_BOOK, Material.COBWEB), new ParameterSlot("ignore-enchantments", Material.ENCHANTED_BOOK, Material.BOOK), new ParameterSlot("ignore-flags",Material.BLUE_BANNER,Material.WHITE_BANNER), new ParameterSlot("ignore-material",Material.CRAFTING_TABLE,Material.WHITE_STAINED_GLASS)),
+    //IF_PLAYER_INTERACT_TYPE_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INTERACTION, null, Material.BIRCH_PRESSURE_PLATE, new ParameterSlot("id",List.of("physical","left-click-block","right-click-block","left-click-air","right-click-air"),Material.STONE_PRESSURE_PLATE,Material.MAGMA_BLOCK,Material.GRASS_BLOCK,Material.GRAY_STAINED_GLASS,Material.WHITE_STAINED_GLASS)),
+    //IF_PLAYER_IS_INVENTORY_OPENED(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.CHEST),
     //IF_PLAYER_INVENTORY_CLICK_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.BIRCH_PRESSURE_PLATE, new ParameterSlot("id",List.of("left","right","shift-left","shift-right","middle","drop","control-drop","number-key","swap-offhand","creative","window-border-left","window-border-right","unknown"),Material.LEVER,Material.LEVER,Material.TRIPWIRE_HOOK,Material.TRIPWIRE_HOOK,Material.STONE_BUTTON,Material.HOPPER,Material.HOPPER_MINECART,Material.STONECUTTER,Material.SHIELD,Material.PUFFERFISH_BUCKET,Material.BIRCH_CHEST_BOAT,Material.SPRUCE_CHEST_BOAT,Material.STRUCTURE_VOID)),
     //IF_PLAYER_EQUIPMENT_SLOT_EQUALS(                   ActionCategory.PLAYER_CONDITION, MenusCategory.INTERACTION, null, Material.LEVER, new ParameterSlot("id",List.of("hand","off-hand","head","body","chest","legs","foot"),Material.NETHERITE_SWORD,Material.SHIELD,Material.NETHERITE_HELMET,Material.NETHERITE_CHESTPLATE,Material.DIAMOND_CHESTPLATE,Material.NETHERITE_LEGGINGS,Material.NETHERITE_BOOTS)),
-    IF_PLAYER_CLICKED_SLOT_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, EqualsClickedSlotCondition.class, Material.SLIME_BALL, new ArgumentSlot("slots", ValueType.NUMBER, (byte) 27)),
-    IF_PLAYER_CURRENT_SLOT_EQUALS(ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, IsCurrentSlotEqualsCondition.class, Material.GRAY_STAINED_GLASS_PANE, new ArgumentSlot("slots", ValueType.NUMBER, (byte) 9)),
     //IF_PLAYER_WEARS_ITEM(                 ActionCategory.PLAYER_CONDITION, MenusCategory.INVENTORY, null, Material.NETHERITE_HELMET, new ArgumentSlot("items", ValueType.ITEM,(byte) 18), new ParameterSlot("slot",Arrays.asList("any","helmet","chestplate","leggings","boots"),Material.GRAY_STAINED_GLASS,Material.NETHERITE_HELMET,Material.NETHERITE_CHESTPLATE, Material.NETHERITE_LEGGINGS, Material.NETHERITE_BOOTS), new ParameterSlot("ignore-amount", Material.BEETROOT_SEEDS, Material.OAK_BUTTON), new ParameterSlot("ignore-name", Material.NAME_TAG, Material.STRING), new ParameterSlot("ignore-lore", Material.WRITABLE_BOOK, Material.COBWEB), new ParameterSlot("ignore-enchantments", Material.ENCHANTED_BOOK, Material.BOOK), new ParameterSlot("ignore-flags",Material.BLUE_BANNER,Material.WHITE_BANNER), new ParameterSlot("ignore-material",Material.CRAFTING_TABLE,Material.WHITE_STAINED_GLASS)),
-
 
     /**
      * <h1>Control Actions.</h1>
@@ -264,16 +269,15 @@ public enum ActionType {
 
     //ELSE(ActionCategory.ELSE_CONDITION,null,null,null),
 
-    CONTROL_THROW_ERROR(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, ThrowErrorAction.class, Material.TNT_MINECART, new ArgumentSlot("message", ValueType.TEXT)),
-    CONTROL_STOP_CODE_LINE(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, StopCodeLineAction.class, Material.STRUCTURE_VOID),
     CONTROL_WAIT(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, WaitAction.class, Material.CLOCK, new ArgumentSlot("time", ValueType.NUMBER)),
     CONTROL_LAUNCH_CYCLES(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, LaunchCyclesAction.class, Material.OXIDIZED_COPPER, new ArgumentSlot("names", ValueType.TEXT, (byte) 27)),
     CONTROL_STOP_CYCLES(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, StopCyclesAction.class, Material.WEATHERED_CUT_COPPER_STAIRS, new ArgumentSlot("names", ValueType.TEXT, (byte) 27)),
     CONTROL_BREAK_REPEAT(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, BreakRepeatAction.class, Material.PRISMARINE_WALL),
     CONTROL_SKIP_REPEAT(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, SkipRepeatAction.class, Material.PRISMARINE_STAIRS),
-
     CONTROL_CLEAR_LOCAL_VARIABLES(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, ClearLocalVariablesAction.class, Material.SLIME_BALL),
     CONTROL_CLEAR_GLOBAL_VARIABLES(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, ClearGlobalVariablesAction.class, Material.MAGMA_CREAM),
+    CONTROL_STOP_CODE_LINE(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, StopCodeLineAction.class, Material.STRUCTURE_VOID),
+    CONTROL_THROW_ERROR(ActionCategory.CONTROL_ACTION, MenusCategory.LINES, ThrowErrorAction.class, Material.TNT_MINECART, new ArgumentSlot("message", ValueType.TEXT)),
 
     CONTROL_CANCEL_EVENT(ActionCategory.CONTROL_ACTION, MenusCategory.EVENTS, CancelEventAction.class, Material.BARRIER),
     CONTROL_UNCANCEL_EVENT(ActionCategory.CONTROL_ACTION, MenusCategory.EVENTS, UncancelEventAction.class, Material.STRUCTURE_VOID),
@@ -289,6 +293,7 @@ public enum ActionType {
     WORLD_SET_TIME(ActionCategory.WORLD_ACTION, MenusCategory.WORLD, SetTimeAction.class, Material.CLOCK, new ArgumentSlot("time", ValueType.NUMBER)),
     WORLD_SET_WEATHER(ActionCategory.WORLD_ACTION, MenusCategory.WORLD, SetWeatherAction.class, Material.WATER_BUCKET, new ParameterSlot("weather", Arrays.asList("clean", "storm", "thunder"), Material.SUNFLOWER, Material.WATER_BUCKET, Material.TRIDENT), new ArgumentSlot("duration", ValueType.NUMBER)),
     WORLD_SET_WORLD_BORDER(ActionCategory.WORLD_ACTION, MenusCategory.WORLD, SetWorldBorderAction.class, Material.END_CRYSTAL, new ArgumentSlot("radius", ValueType.NUMBER), new ArgumentSlot("time", ValueType.NUMBER), new ArgumentSlot("damage", ValueType.NUMBER), new ArgumentSlot("warning-distance", ValueType.NUMBER), new ArgumentSlot("warning-time", ValueType.NUMBER), new ArgumentSlot("safe-distance", ValueType.NUMBER)),
+    WORLD_SET_DIFFICULTY(ActionCategory.WORLD_ACTION, MenusCategory.WORLD, SetDifficultyAction.class, Material.WITHER_SKELETON_SKULL, new ParameterSlot("difficulty", List.of("peaceful", "easy", "normal", "hard"), Material.GOLDEN_APPLE, Material.WOODEN_SWORD, Material.IRON_SWORD, Material.NETHERITE_SWORD)),
     WORLD_VISUAL_PARAM_PHYS_OBJECT(
             ActionCategory.WORLD_ACTION, MenusCategory.WORLD, VisualParamPhysObjectAction.class,
             Material.FIRE_CHARGE,
@@ -340,7 +345,6 @@ public enum ActionType {
     WORLD_SCOREBOARD_SET_DISPLAY_NAME(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, ScoreboardSetDisplayNameAction.class, Material.NAME_TAG, new ArgumentSlot("name", ValueType.TEXT), new ArgumentSlot("display-name", ValueType.TEXT)),
     WORLD_SCOREBOARD_CLEAR_SCORES(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, ClearScoreboardScoresAction.class, Material.PAPER, new ArgumentSlot("scoreboards", ValueType.TEXT, (byte) 27)),
     WORLD_SCOREBOARD_SET_NUMBER_STYLE(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, SetScoreNumberStyleAction.class, Material.SLIME_BALL, new ArgumentSlot("scoreboards", ValueType.TEXT, (byte) 18), new ArgumentSlot("style", ValueType.TEXT)),
-
     WORLD_DELETE_SCORE_BOARD(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, DeleteScoreboardAction.class, Material.STRUCTURE_VOID, new ArgumentSlot("scoreboards", ValueType.TEXT, (byte) 27)),
     WORLD_CREATE_BOSS_BAR(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, CreateBossBarAction.class, Material.DRAGON_BREATH, new ArgumentSlot("name", ValueType.TEXT), new ArgumentSlot("display-name", ValueType.TEXT), new ArgumentSlot("progress", ValueType.NUMBER), new ParameterSlot("color", List.of("purple", "red", "yellow", "green", "blue", "pink", "white"), Material.PURPLE_STAINED_GLASS, Material.RED_STAINED_GLASS, Material.YELLOW_STAINED_GLASS, Material.LIME_STAINED_GLASS, Material.BLUE_STAINED_GLASS, Material.PINK_STAINED_GLASS, Material.WHITE_STAINED_GLASS), new ParameterSlot("overlay", List.of("progress", "notched_6", "notched_10", "notched_12", "notched_20"), Material.BREEZE_ROD, Material.BLAZE_ROD, Material.STICK, Material.BONE, Material.AMETHYST_SHARD)),
     WORLD_BOSS_BAR_COLOR(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, BossBarColorAction.class, Material.PURPLE_DYE, new ArgumentSlot("name", ValueType.TEXT), new ParameterSlot("color", List.of("purple", "red", "yellow", "green", "blue", "pink", "white"), Material.PURPLE_STAINED_GLASS, Material.RED_STAINED_GLASS, Material.YELLOW_STAINED_GLASS, Material.LIME_STAINED_GLASS, Material.BLUE_STAINED_GLASS, Material.PINK_STAINED_GLASS, Material.WHITE_STAINED_GLASS)),
@@ -352,7 +356,6 @@ public enum ActionType {
     WORLD_TEAM_SET_COLOR(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, TeamSetColorAction.class, Material.BLUE_DYE, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT), new ArgumentSlot("color", ValueType.COLOR)),
     WORLD_TEAM_SET_COLLISION_RULE(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, TeamSetCollisionRuleAction.class, Material.PLAYER_HEAD, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT), new ParameterSlot("option", List.of("always", "for-own-team", "for-other-teams", "never"), Material.LIME_SHULKER_BOX, Material.BLUE_SHULKER_BOX, Material.ORANGE_SHULKER_BOX, Material.RED_SHULKER_BOX)),
     WORLD_TEAM_SET_NAME_TAG_VISIBLE(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, TeamSetVisibleTagAction.class, Material.NAME_TAG, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT), new ParameterSlot("option", List.of("always", "for-own-team", "for-other-teams", "never"), Material.LIME_SHULKER_BOX, Material.BLUE_SHULKER_BOX, Material.ORANGE_SHULKER_BOX, Material.RED_SHULKER_BOX)),
-
     WORLD_TEAM_SET_CAN_SEE_INVISIBLE(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, TeamSetCanSeeInvisibleAction.class, Material.GRAY_BANNER, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT), new ParameterSlot("visible")),
     WORLD_DELETE_TEAM(ActionCategory.WORLD_ACTION, MenusCategory.APPEARANCE, DeleteTeamAction.class, Material.RED_BANNER, new ArgumentSlot("scoreboard", ValueType.TEXT), new ArgumentSlot("team", ValueType.TEXT)),
 
@@ -363,40 +366,32 @@ public enum ActionType {
     WORLD_SPAWN_EYE_OF_ENDER(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnEnderEyeAction.class, Material.ENDER_EYE, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("name", ValueType.TEXT), new ArgumentSlot("despawn-time", ValueType.NUMBER), new ArgumentSlot("target", ValueType.LOCATION), new ParameterSlot("drop", List.of("random", "drop", "shatter"), Material.PRISMARINE_SHARD, Material.ENDER_EYE, Material.BLUE_STAINED_GLASS)),
     WORLD_SPAWN_FALLING_BLOCK(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnFallingBlockAction.class, Material.SAND, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("block", ValueType.ITEM), new ArgumentSlot("name", ValueType.TEXT), new ParameterSlot("drop"), new ArgumentSlot("damage", ValueType.NUMBER)),
     WORLD_SPAWN_END_CRYSTAL(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnEndCrystalAction.class, Material.END_CRYSTAL, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("name", ValueType.TEXT), new ParameterSlot("bottom"), new ArgumentSlot("beam", ValueType.LOCATION)),
-
     WORLD_CREATE_EXPLOSION(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, CreateExplosionAction.class, Material.TNT, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("power", ValueType.NUMBER), new ParameterSlot("fire", Material.GUNPOWDER, Material.CAMPFIRE), new ParameterSlot("damage", Material.GRASS_BLOCK, Material.MAGMA_BLOCK)),
     WORLD_STRIKE_LIGHTNING(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, StrikeLightningAction.class, Material.TRIDENT, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("damage", true, Material.REDSTONE, Material.GLOWSTONE_DUST)),
     WORLD_DROP_ITEM(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, DropItemAction.class, Material.BREAD, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("naturally", true, Material.PUMPKIN_SEEDS, Material.PUMPKIN_SEEDS), new ArgumentSlot("item", ValueType.ITEM)),
     WORLD_SPAWN_PARTICLE(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnParticleAction.class, Material.NETHER_STAR, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("particle", ValueType.PARTICLE), new ArgumentSlot("count", ValueType.NUMBER), new ArgumentSlot("offset-x", ValueType.NUMBER), new ArgumentSlot("offset-y", ValueType.NUMBER), new ArgumentSlot("offset-z", ValueType.NUMBER)),
-
-
     WORLD_SPAWN_ARROW(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnArrowAction.class, Material.ARROW, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("arrow", ValueType.ITEM)),
     WORLD_SPAWN_FIREWORK(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnFireworkAction.class, Material.FIREWORK_ROCKET, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("firework", ValueType.ITEM)),
     WORLD_CREATE_FIREWORK_EXPLOSION(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, CreateFireworkExplosionAction.class, Material.FIREWORK_STAR, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("firework", ValueType.ITEM)),
     WORLD_CREATE_EXPERIENCE_ORB(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnExperienceOrbAction.class, Material.EXPERIENCE_BOTTLE, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("amount", ValueType.NUMBER)),
-
     WORLD_SPAWN_PARTICLES_LINE(ActionCategory.WORLD_ACTION, MenusCategory.ENTITY, SpawnParticlesLineAction.class, Material.BREEZE_ROD, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION), new ArgumentSlot("particle", ValueType.PARTICLE), new ArgumentSlot("count", ValueType.NUMBER), new ArgumentSlot("offset-x", ValueType.NUMBER), new ArgumentSlot("offset-y", ValueType.NUMBER), new ArgumentSlot("offset-z", ValueType.NUMBER)),
-    WORLD_SET_DIFFICULTY(ActionCategory.WORLD_ACTION, MenusCategory.WORLD, SetDifficultyAction.class, Material.WITHER_SKELETON_SKULL, new ParameterSlot("difficulty", List.of("peaceful", "easy", "normal", "hard"), Material.GOLDEN_APPLE, Material.WOODEN_SWORD, Material.IRON_SWORD, Material.NETHERITE_SWORD)),
+
+    WORLD_COPY_BLOCKS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, CopyBlocksAction.class, Material.NETHERITE_SCRAP, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION), new ArgumentSlot("from", ValueType.LOCATION), new ArgumentSlot("where", ValueType.LOCATION)),
+    WORLD_SET_BLOCKS_AREA_TYPE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlocksAreaTypeAction.class, Material.COBBLESTONE, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION), new ArgumentSlot("type", ValueType.ITEM)),
+    WORLD_SET_BLOCK_TYPE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlockTypeAction.class, Material.STONE, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("type", ValueType.ITEM)),
+    WORLD_DESTROY_BLOCK(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, DestroyBlockAction.class, Material.TNT, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("show-particle", true, Material.GUNPOWDER, Material.LIGHT_GRAY_STAINED_GLASS), new ParameterSlot("drop-experience", true, Material.EXPERIENCE_BOTTLE, Material.STRING)),
+    WORLD_APPLY_BONE_MEAL(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, ApplyBoneMealAction.class, Material.BONE_MEAL, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 27)),
+    WORLD_SET_BLOCK_POWERED(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlockPoweredAction.class, Material.REDSTONE_BLOCK, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("powered", true, Material.REDSTONE_BLOCK, Material.COAL_BLOCK)),
+    WORLD_SET_BLOCK_WATERLOGGED(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetWaterLoggedAction.class, Material.WATER_BUCKET, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("water", true, Material.WATER_BUCKET, Material.BUCKET)),
+    WORLD_GIVE_CONTAINER_ITEMS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GiveItemsToContainerAction.class, Material.CHEST, new ArgumentSlot("items", ValueType.ITEM, (byte) 18), new ArgumentSlot("location", ValueType.LOCATION)),
+    WORLD_PUT_ITEM_IN_CONTAINER(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetItemBySlotInContainerAction.class, Material.HOPPER, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("slot", ValueType.NUMBER), new ArgumentSlot("item", ValueType.ITEM)),
+    WORLD_CLEAR_CONTAINER(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, ClearContainerAction.class, Material.BARRIER, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 27)),
+    WORLD_GET_CONTAINER_ITEMS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GetContainerItemsAction.class, Material.HOPPER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("location", ValueType.LOCATION)),
+    WORLD_GET_SIGN_LINE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GetSignLineAction.class, Material.OAK_SIGN, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("side", Arrays.asList("front", "back"), Material.OAK_SIGN, Material.WARPED_SIGN), new ArgumentSlot("number", ValueType.NUMBER)),
     WORLD_SET_SIGN_LINE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetSignLineAction.class, Material.BIRCH_SIGN, new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("side", Arrays.asList("front", "back"), Material.OAK_SIGN, Material.WARPED_SIGN), new ArgumentSlot("number", ValueType.NUMBER), new ArgumentSlot("text", ValueType.TEXT)),
     WORLD_SET_SIGN_WAXED(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetSignWaxedAction.class, Material.HONEYCOMB, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("waxed", true, Material.HONEYCOMB, Material.GLASS_BOTTLE)),
     WORLD_SET_SIGN_GLOWING_TEXT(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetSignGlowingTextAction.class, Material.GLOW_INK_SAC, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("side", Arrays.asList("front", "back"), Material.OAK_SIGN, Material.WARPED_SIGN), new ParameterSlot("glowing", true, Material.GLOW_INK_SAC, Material.INK_SAC)),
-    WORLD_SET_BLOCK_WATERLOGGED(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetWaterLoggedAction.class, Material.WATER_BUCKET, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("water", true, Material.WATER_BUCKET, Material.BUCKET)),
-
-    WORLD_CLEAR_CONTAINER(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, ClearContainerAction.class, Material.BARRIER, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 27)),
-    WORLD_GIVE_CONTAINER_ITEMS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GiveItemsToContainerAction.class, Material.CHEST, new ArgumentSlot("items", ValueType.ITEM, (byte) 18), new ArgumentSlot("location", ValueType.LOCATION)),
-    WORLD_PUT_ITEM_IN_CONTAINER(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetItemBySlotInContainerAction.class, Material.HOPPER, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("slot", ValueType.NUMBER), new ArgumentSlot("item", ValueType.ITEM)),
-    WORLD_GET_CONTAINER_ITEMS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GetContainerItemsAction.class, Material.HOPPER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("location", ValueType.LOCATION)),
-
-    WORLD_APPLY_BONE_MEAL(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, ApplyBoneMealAction.class, Material.BONE_MEAL, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 27)),
     WORLD_SET_BLOCK_BIOME(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlockBiomeAction.class, Material.MYCELIUM, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("biome", ValueType.TEXT)),
-
-    WORLD_SET_BLOCK_TYPE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlockTypeAction.class, Material.STONE, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ArgumentSlot("type", ValueType.ITEM)),
-    WORLD_SET_BLOCKS_AREA_TYPE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlocksAreaTypeAction.class, Material.COBBLESTONE, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION), new ArgumentSlot("type", ValueType.ITEM)),
-    WORLD_COPY_BLOCKS(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, CopyBlocksAction.class, Material.NETHERITE_SCRAP, new ArgumentSlot("first", ValueType.LOCATION), new ArgumentSlot("second", ValueType.LOCATION), new ArgumentSlot("from", ValueType.LOCATION), new ArgumentSlot("where", ValueType.LOCATION)),
-    WORLD_GET_SIGN_LINE(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, GetSignLineAction.class, Material.OAK_SIGN, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("location", ValueType.LOCATION), new ParameterSlot("side", Arrays.asList("front", "back"), Material.OAK_SIGN, Material.WARPED_SIGN), new ArgumentSlot("number", ValueType.NUMBER)),
-
-    WORLD_DESTROY_BLOCK(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, DestroyBlockAction.class, Material.TNT, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("show-particle", true, Material.GUNPOWDER, Material.LIGHT_GRAY_STAINED_GLASS), new ParameterSlot("drop-experience", true, Material.EXPERIENCE_BOTTLE, Material.STRING)),
-    WORLD_SET_BLOCK_POWERED(ActionCategory.WORLD_ACTION, MenusCategory.BLOCKS, SetBlockPoweredAction.class, Material.REDSTONE_BLOCK, new ArgumentSlot("locations", ValueType.LOCATION, (byte) 18), new ParameterSlot("powered", true, Material.REDSTONE_BLOCK, Material.COAL_BLOCK)),
 
     /**
      * <h1>Variable Actions.</h1>
@@ -490,16 +485,13 @@ public enum ActionType {
     VAR_GET_LOCATION_PITCH(ActionCategory.VARIABLE_ACTION, MenusCategory.LOCATION_OPERATIONS, GetLocationPitchAction.class, Material.ORANGE_STAINED_GLASS_PANE, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("location", ValueType.LOCATION)),
 
     VAR_CREATE_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, CreateListAction.class, Material.BOOKSHELF, new ArgumentSlot("elements", ValueType.ANY, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE)),
-    VAR_GET_LIST_SIZE(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, GetListSizeAction.class, Material.SLIME_BALL, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
-    VAR_SUBLIST_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, SublistAction.class, Material.SHEARS, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE), new ArgumentSlot("from", ValueType.NUMBER), new ArgumentSlot("to", ValueType.NUMBER)),
-    VAR_CLONE_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, CloneListAction.class, Material.COMPOSTER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
-    VAR_MERGE_LISTS(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, MergeListsAction.class, Material.LEAD, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
     VAR_ADD_TO_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, AddToListAction.class, Material.KNOWLEDGE_BOOK, new ArgumentSlot("elements", ValueType.ANY, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE)),
     VAR_SET_IN_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, SetInListAction.class, Material.CAULDRON, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("index", ValueType.NUMBER), new ArgumentSlot("value", ValueType.ANY)),
     VAR_GET_BY_ID_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, GetByIdFromListAction.class, Material.WATER_BUCKET, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE), new ArgumentSlot("index", ValueType.NUMBER)),
-    VAR_REMOVE_BY_ID_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, RemoveByIdFromListAction.class, Material.LAVA_BUCKET, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("index", ValueType.NUMBER)),
-    VAR_REMOVE_BY_VALUE_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, RemoveByValueFromListAction.class, Material.POWDER_SNOW_BUCKET, new ArgumentSlot("elements", ValueType.ANY, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE), new ParameterSlot("deletion", List.of("all", "first", "last"), Material.RED_DYE, Material.ENDER_EYE, Material.ENDER_PEARL)),
     VAR_GET_RANDOM_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, GetRandomFromListAction.class, Material.ENDER_EYE, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
+    VAR_SUBLIST_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, SublistAction.class, Material.SHEARS, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE), new ArgumentSlot("from", ValueType.NUMBER), new ArgumentSlot("to", ValueType.NUMBER)),
+    VAR_CLONE_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, CloneListAction.class, Material.COMPOSTER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
+    VAR_MERGE_LISTS(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, MergeListsAction.class, Material.LEAD, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
     VAR_CALCULATE_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS,
             CalculateFromListAction.class,
             Material.COBWEB, new ArgumentSlot("variable", ValueType.VARIABLE),
@@ -520,13 +512,16 @@ public enum ActionType {
                     Material.EMERALD, Material.IRON_NUGGET, Material.STICK,
                     Material.PUMPKIN_SEEDS, Material.WHEAT_SEEDS
             )),
+    VAR_GET_LIST_SIZE(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, GetListSizeAction.class, Material.SLIME_BALL, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("list", ValueType.VARIABLE)),
+    VAR_REMOVE_BY_ID_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, RemoveByIdFromListAction.class, Material.LAVA_BUCKET, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("index", ValueType.NUMBER)),
+    VAR_REMOVE_BY_VALUE_FROM_LIST(ActionCategory.VARIABLE_ACTION, MenusCategory.LIST_OPERATIONS, RemoveByValueFromListAction.class, Material.POWDER_SNOW_BUCKET, new ArgumentSlot("elements", ValueType.ANY, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE), new ParameterSlot("deletion", List.of("all", "first", "last"), Material.RED_DYE, Material.ENDER_EYE, Material.ENDER_PEARL)),
+
     VAR_CREATE_MAP(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, CreateMapAction.class, Material.CHEST_MINECART, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("keys", ValueType.VARIABLE), new ArgumentSlot("values", ValueType.VARIABLE)),
     VAR_PUT_INTO_MAP(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, PutIntoMapAction.class, Material.CHEST, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("key", ValueType.ANY), new ArgumentSlot("value", ValueType.ANY)),
-    VAR_REMOVE_FROM_MAP_BY_KEY(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, RemoveFromMapByKeyAction.class, Material.BARRIER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("key", ValueType.ANY)),
-
     VAR_GET_FROM_MAP_BY_KEY(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, GetFromMapByKeyAction.class, Material.MINECART, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("map", ValueType.VARIABLE), new ArgumentSlot("key", ValueType.ANY)),
     VAR_GET_KEYS_SET(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, GetKeysSetAction.class, Material.NAME_TAG, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("map", ValueType.VARIABLE)),
     VAR_GET_VALUES_SET(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, GetValuesSetAction.class, Material.APPLE, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("map", ValueType.VARIABLE)),
+    VAR_REMOVE_FROM_MAP_BY_KEY(ActionCategory.VARIABLE_ACTION, MenusCategory.MAP_OPERATIONS, RemoveFromMapByKeyAction.class, Material.BARRIER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("key", ValueType.ANY)),
 
     VAR_CLONE_ITEM(ActionCategory.VARIABLE_ACTION, MenusCategory.ITEM_OPERATIONS, CloneItemAction.class, Material.ITEM_FRAME, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("item", ValueType.ITEM)),
     VAR_SET_ITEM_DISPLAY_NAME(ActionCategory.VARIABLE_ACTION, MenusCategory.ITEM_OPERATIONS, SetItemDisplayNameAction.class, Material.NAME_TAG, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("item", ValueType.ITEM), new ArgumentSlot("name", ValueType.TEXT)),
@@ -556,9 +551,9 @@ public enum ActionType {
 
     //VAR_GET_ITEM_PAGES( ActionCategory.VARIABLE_ACTION, MenusCategory.ITEM_OPERATIONS, null, Material.CRAFTING_TABLE, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("item", ValueType.ITEM)),
 
+    VAR_MODIFY_VECTOR(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, ModifyVectorAction.class, Material.CYAN_STAINED_GLASS, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("vector", ValueType.VECTOR), new ArgumentSlot("x", ValueType.NUMBER), new ArgumentSlot("y", ValueType.NUMBER), new ArgumentSlot("z", ValueType.NUMBER), new ParameterSlot("add")),
     VAR_NORMALIZE_VECTOR(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, NormalizeVectorAction.class, Material.PRISMARINE_BRICKS, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("vector", ValueType.VECTOR)),
     VAR_VECTOR_TO_LOCATION(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, VectorToLocationAction.class, Material.PAPER, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("vector", ValueType.VECTOR)),
-    VAR_MODIFY_VECTOR(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, ModifyVectorAction.class, Material.CYAN_STAINED_GLASS, new ArgumentSlot("variable", ValueType.VARIABLE), new ArgumentSlot("vector", ValueType.VECTOR), new ArgumentSlot("x", ValueType.NUMBER), new ArgumentSlot("y", ValueType.NUMBER), new ArgumentSlot("z", ValueType.NUMBER), new ParameterSlot("add")),
 
     VAR_ADD_VECTORS(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, AddVectorsAction.class, Material.BRICK, new ArgumentSlot("vectors", ValueType.VECTOR, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE)),
     VAR_SUBTRACT_VECTORS(ActionCategory.VARIABLE_ACTION, MenusCategory.VECTOR_OPERATIONS, SubtractVectorsAction.class, Material.NETHER_BRICK, new ArgumentSlot("vectors", ValueType.VECTOR, (byte) 18), new ArgumentSlot("variable", ValueType.VARIABLE)),
@@ -659,6 +654,7 @@ public enum ActionType {
     ENTITY_CLEAR_POTION_EFFECTS(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntityClearPotionEffectsAction.class, Material.MILK_BUCKET, new ArgumentSlot("potions", ValueType.POTION)),
     ENTITY_REMOVE_POTION_EFFECTS(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntityRemovePotionEffectsAction.class, Material.GLASS_BOTTLE, new ArgumentSlot("potions", ValueType.POTION, (byte) 27)),
     ENTITY_SET_STEP_HEIGHT(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, SetStepHeightAction.class, Material.RABBIT_FOOT, new ArgumentSlot("height", ValueType.NUMBER), new ParameterSlot("add")),
+    ENTITY_SET_TARGET(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, SetEntityTargetAction.class, Material.NETHER_STAR, new ArgumentSlot("entity", ValueType.TEXT)),
     ENTITY_SET_REMAINING_AIR(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetRemainingAirAction.class, Material.SPONGE, new ArgumentSlot("ticks", ValueType.NUMBER), new ParameterSlot("add")),
     ENTITY_SET_FALL_DISTANCE(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetFallDistanceAction.class, Material.RABBIT_FOOT, new ArgumentSlot("distance", ValueType.NUMBER), new ParameterSlot("add")),
     ENTITY_SET_LAST_DAMAGE(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetLastDamageAction.class, Material.REDSTONE, new ArgumentSlot("damage", ValueType.NUMBER), new ParameterSlot("add")),
@@ -669,7 +665,6 @@ public enum ActionType {
     ENTITY_SET_BEE_STINGER_COOLDOWN(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetBeeStingerCooldownAction.class, Material.BEE_NEST, new ArgumentSlot("cooldown", ValueType.NUMBER), new ParameterSlot("add")),
     ENTITY_SET_MAXIMUM_NO_DAMAGE_TICKS(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetMaxNoDamageTicksAction.class, Material.ENCHANTED_GOLDEN_APPLE, new ArgumentSlot("ticks", ValueType.NUMBER), new ParameterSlot("add")),
     ENTITY_SET_MAXIMUM_AIR(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, EntitySetMaximumAirAction.class, Material.POTION, new ArgumentSlot("ticks", ValueType.NUMBER), new ParameterSlot("add")),
-    ENTITY_SET_TARGET(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_PARAMS, SetEntityTargetAction.class, Material.NETHER_STAR, new ArgumentSlot("entity", ValueType.TEXT)),
 
     ENTITY_GIVE_ITEMS(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_INVENTORY, EntityGiveItemsAction.class, Material.CHEST_MINECART, new ArgumentSlot("items", ValueType.ITEM, (byte) 27)),
     ENTITY_SET_ITEMS(ActionCategory.ENTITY_ACTION, MenusCategory.ENTITY_INVENTORY, EntitySetItemsAction.class, Material.DARK_OAK_CHEST_BOAT, new ArgumentSlot("items", ValueType.ITEM, (byte) 27, true)),
@@ -862,7 +857,7 @@ public enum ActionType {
     IF_ENTITY_HAS_GRAVITY(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, HasEntityGravity.class, Material.SAND),
     IF_ENTITY_IS_IN_RAIN(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsEntityInRain.class, Material.WATER_BUCKET),
     IF_ENTITY_IS_IN_LAVA(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsEntityInLava.class, Material.LAVA_BUCKET),
-    IF_ENTITY_IS_IN_POWDERED_SNOW(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsWorldBlockPoweredCondition.class, Material.POWDER_SNOW_BUCKET),
+    IF_ENTITY_IS_IN_POWDERED_SNOW(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsEntityInPowderedSnow.class, Material.POWDER_SNOW_BUCKET),
     IF_ENTITY_IS_ON_GROUND(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsEntityOnGround.class, Material.GRASS_BLOCK),
     IF_ENTITY_IS_INSIDE_VEHICLE(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, IsEntityInsideVehicle.class, Material.MINECART),
     IF_ENTITY_HAS_NO_PHYSICS(ActionCategory.ENTITY_CONDITION, MenusCategory.ENTITY_INTERACTION, HasEntityNoPhysics.class, Material.DAMAGED_ANVIL),
